Apply suggestions from code review

--- a/src/content/docs/es/guides/migrate-to-astro/from-docusaurus.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-docusaurus.mdx
@@ -9,7 +9,7 @@ i18nReady: true
 
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-[Docusaurus](https://Docusaurus.io) es un popular constructor de sitios web de documentación construido en React.
+[Docusaurus](https://Docusaurus.io) es un popular constructor de sitios web de documentación construido con React.
 
 ## Principales similitudes entre Docusaurus y Astro
 
@@ -21,7 +21,7 @@ Docusaurus y Astro comparten algunas similitudes que te ayudarán a migrar tu pr
 
 - Astro y Docusaurus usan el [enrutamiento basado en archivos](/es/core-concepts/routing/) para generar rutas de de página automáticamente para cualquier archivo MDX ubicado en `src/pages`. El uso de la estructura de archivos de Astro para tu contenido existente y al agregar nuevas páginas debería ser familiar.
 
-- Astro tiene una [integración oficial para el uso de componentes de React](/es/guides/integrations-guide/react/). Ten en cuenta que en Astro, los archivos de React **deben** tener la extensión `.jsx` o `.tsx`.
+- Astro tiene una [integración oficial para usar componentes de React](/es/guides/integrations-guide/react/). Ten en cuenta que en Astro, los archivos de React **deben** tener la extensión `.jsx` o `.tsx`.
 
 - Astro admite la [instalación de paquetes de NPM](/es/guides/imports/#paquetes-npm), incluyendo varios para React. Podrás conservar algunos o todos tus componentes y dependencias existentes de React.
 
@@ -41,7 +41,7 @@ Cuando reconstruyas tu sitio de Docusaurus a Astro, notarás algunas diferencias
 
 ## Migrar de Docusaurus a Astro
 
-Para convertir un sitio de documentación de Docusaurus a Astro, empieza con nuestra plantilla oficial de inicio, o explora más temas de la comunidad en nuestro [mostrador de temas](https://astro.build/themes?search=&categories%5B%5D=docs). 
+Para convertir un sitio de documentación de Docusaurus a Astro, empieza con nuestra plantilla oficial de inicio, o explora más temas de la comunidad en nuestro [catálogo de temas](https://astro.build/themes?search=&categories%5B%5D=docs). 
 
 Puedes pasar el argumento `--template` al comando `create astro`  para empezar un nuevo proyecto de Astro con una de nuestras plantillas oficiales. O, puedes [comenzar un nuevo proyecto desde cualquier repositorio de Astro existente en GitHub](/es/install/auto/#plantillas-de-inicio).
 
@@ -66,7 +66,7 @@ Puedes pasar el argumento `--template` al comando `create astro`  para empezar u
 
 Añade nuestra integración de MDX y lleva tus archivos de contenido existentes para [crear páginas MDX](/es/guides/markdown-content/). Todavía puedes aprovechar el [enrutamiento basado en archivos](/es/core-concepts/routing/) copiando estos documentos directamente en `src/pages/` en Astro, la misma carpeta que usas actualmente. Crea carpetas con nombres que correspondan a tu proyecto existente de Docusaurus y deberías poder mantener tus URLs existentes.
 
-Docusaurus probablemente maneje gran parte del diseño y los metadatos de tu sitio por ti. Es posible que desees leer acerca de cómo [construir diseños en Astro como envoltorios de página para Markdown y MDX](/es/core-concepts/layouts/#plantillas-de-markdownmdx) para ver cómo administrar la plantilla por ti mismo en Astro, incluyendo la sección `<head>` de tu página.
+Docusaurus probablemente maneje gran parte del diseño y los metadatos de tu sitio por ti. Es posible que desees leer acerca de cómo [construir diseños en Astro como envoltorios para páginas Markdown ó MDX](/es/core-concepts/layouts/#plantillas-de-markdownmdx) ademas de cómo administrar la plantilla por ti mismo en Astro, incluyendo la sección `<head>` de tu página.
 
 Puedes encontrar la plantilla inicial de documentación de Astro, y otras plantillas oficiales, en [astro.new](https://astro.new). Encontrarás un enlace al repositorio de GitHub de cada proyecto, así como enlaces de un solo clic para abrir un proyecto de trabajo en los entornos de desarrollo en línea de StackBlitz, CodeSandbox y Gitpod.
 
