--- a/src/content/docs/es/guides/migrate-to-astro/from-sveltekit.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-sveltekit.mdx
@@ -38,7 +38,7 @@ Cuando reconstruyas tu sitio de SvelteKit a Astro, notarás algunas diferencias 
 
 ## Migrar desde SvelteKit a Astro
 
-Para migrar un blog de SvelteKit a Astro, empieza con nuestra plantilla inicial para blogs, o explora más temas de la comunidad para blogs en nuestro [mostrador de temas](https://astro.build/themes/).
+Para migrar un blog de SvelteKit a Astro, empieza con nuestra plantilla inicial para blogs, o explora más temas de la comunidad para blogs en nuestro [catálogo de temas](https://astro.build/themes/).
 
 Puedes pasar el argumento `--template` al comando `create astro` para empezar un nuevo proyecto de Astro con una de nuestras plantillas oficiales. O, puedes [comenzar un nuevo proyecto desde cualquier repositorio de Astro existente en GitHub](/es/install/auto/#plantillas-de-inicio).
 
