--- a/src/content/docs/es/reference/errors/prerender-dynamic-endpoint-path-collide.mdx
+++ b/src/content/docs/es/reference/errors/prerender-dynamic-endpoint-path-collide.mdx
@@ -1,5 +1,5 @@
 ---
-title: El endpoint dinámico prerenderizado tiene una colisión de rutas.
+title: Prerendered dynamic endpoint has path collision.
 i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 ---
