--- a/src/content/docs/es/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-nextjs.mdx
@@ -9,122 +9,123 @@ i18nReady: true
 import AstroJSXTabs from '~/components/tabs/AstroJSXTabs.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-Here are some key concepts and migration strategies to help you get started. Use the rest of our docs and our [Discord community](https://astro.build/chat) to keep going!
+Aquí hay algunos conceptos clave y estrategias de migración para ayudarte a empezar. Utiliza el resto de nuestra documentación y nuestra [comunidad de Discord](https://astro.build/chat) para seguir adelante.
 
 ## Principales similitudes entre Next.js y Astro
 
 Next.js y Astro comparten algunas similitudes que te ayudarán a migrar tu proyecto:
 
-- The [syntax of `.astro` files is similar to JSX](/en/core-concepts/astro-syntax/#differences-between-astro-and-jsx). Writing Astro should feel familiar.
-- Astro projects can also be SSG or [SSR with page-level prerendering](/en/guides/server-side-rendering/#hybrid-rendering).
-- Astro uses file-based routing, and [allows specially named pages to create dynamic routes](/en/core-concepts/routing/#dynamic-routes).
-- Astro is [component-based](/en/core-concepts/astro-components/), and your markup structure will be similar before and after your migration.
-- Astro has [official integrations for React, Preact, and Solid](/en/guides/integrations-guide/react/) so you can use your existing JSX components. Note that in Astro, these files **must** have a `.jsx` or `.tsx` extension.
-- Astro has support for [installing NPM packages](/en/guides/imports/#npm-packages), including React libraries. Many of your existing dependencies will work in Astro.
+- La [sintaxis de los archivos `.astro` es similar a la de JSX](/es/guides/server-side-rendering/#renderizado-híbrido). Escribir en Astro debería resultarte familiar.
+- Los proyectos de Astro también pueden ser SSG o [SSR con prerenderización a nivel de página](/es/guides/server-side-rendering/#renderizado-híbrido).
+- Astro utiliza  el enrutamiento basado en archivos, y [permite que las páginas con nombre especiales creen rutas dinámicas](/es/core-concepts/routing/#rutas-dinámicas).
+- Astro está [basado en componentes](/es/core-concepts/astro-components/), y la estructura de tu marcado será similar antes y después de la migración.
+- Astro tiene [integraciones oficiales para React, Preact, y Solid](/es/guides/integrations-guide/react/) por lo que puedes utilizar tus componentes JSX existentes. Ten en cuenta que en Astro, estos archivos **deben** tener una extensión `.jsx` o `.tsx`.
+- Astro cuenta con soporte para [instalar paquetes NPM](/es/guides/imports/#paquetes-npm), incluyendo bibliotecas de React. Muchas de tus dependencias existentes funcionarán en Astro.
 
 ## Principales diferencias entre Next.js y Astro
 
 Cuando reconstruyas tu sitio de Next.js a Astro, notarás algunas diferencias importantes:
 
-- [MPA vs SPA](/en/concepts/mpa-vs-spa/): Next.js is a React single-page app, and uses `index.js` as your project's root. Astro is a multi-page site, and `index.astro` is your home page.
+- [MPA vs SPA](/es/concepts/mpa-vs-spa/): Next.js es una aplicación de página única de React, y utiliza `index.js` como raíz de tu proyecto. Astro es un sitio multipágina, y `index.astro` es tu página de inicio.
 
-- [`.astro` components](/en/core-concepts/astro-components/) are not written as exported functions that return page templating. Instead, you'll split your code into a "code fence" for your JavaScript and a body exclusively for the HTML you generate.
+- [Los Componentes `.astro`](/es/core-concepts/astro-components/) no se escriben como funciones exportadas que devuelven plantillas de página. En su lugar, dividirás tu código en "bloques de código" para tu JavaScript y un cuerpo exclusivamente para el HTML que generes.
 
-- [Content-focus](/en/concepts/why-astro/): Astro was designed primarily for content-focused sites with small pieces of interactivity. An existing Next.js app might be built for high client-side interactivity and may include items that are difficult to replicate using `.astro` components, such as dashboards.
+- [Enfoque en el contenido](/es/concepts/why-astro/): Astro fue diseñado principalmente para sitios enfocados en el contenido con pequeñas piezas de interactividad. Una aplicación existente de Next.js puede estar construida para una alta interactividad del lado del cliente y puede incluir elementos que son difíciles de replicar usando componentes de `.astro`, como paneles de control.
 
 ## Migrar tu proyecto de Next.js
 
-Each project migration will look different, but there are some common actions you will perform when converting from Next.js to Astro.
+Cada migración será diferente, pero hay algunas acciones comunes que realizarás al migrar de Next.js a Astro.
 
 ### Crear un nuevo proyecto de Astro
-Use the `create astro` command for your package manager to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes).
+Utiliza el comando `create astro` en tu gestor de paquetes para lanzar el asistente de línea de comandos de Astro, o elige un tema de la comunidad desde el [catálogo de temas de Astro](https://astro.build/themes).
 
-You can pass a `--template` argument to the `create astro` command to start a new Astro project with one of our official starters (e.g. `docs`, `blog`, `portfolio`). Or, you can [start a new project from any existing Astro repository on GitHub](/en/install/auto/#starter-templates).
+Puedes pasar el argumento `--template` al comando `create astro` para iniciar un nuevo proyecto de Astro con una de nuestras plantillas oficiales (p. ej. `docs`, `blog`, `portafolio`). O, puedes [iniciar un nuevo proyecto a partir de cualquier repositorio de Astro existente en GitHub.](/es/install/auto/#plantillas-de-inicio).
 
   <PackageManagerTabs>
     <Fragment slot="npm">
     ```shell
-    # launch the Astro CLI Wizard 
+    # Lanzar el Asistente de línea de comandos de Astro
     npm create astro@latest
 
-    # create a new project with an official example
+    # Crear un nuevo proyecto con un ejemplo oficial.
     npm create astro@latest -- --template <example-name>
     ```
     </Fragment>
     <Fragment slot="pnpm">
     ```shell
-    # launch the Astro CLI Wizard 
+    # Lanzar el Asistente de línea de comandos de Astro
     pnpm create astro@latest
 
-    # create a new project with an official example
+    # Crear un nuevo proyecto con un ejemplo oficial.
     pnpm create astro@latest --template <example-name>
     ```
     </Fragment>
     <Fragment slot="yarn">
     ```shell
-    # launch the Astro CLI Wizard 
+    # Lanzar el Asistente de línea de comandos de Astro
     yarn create astro@latest
 
-    # create a new project with an official example
+    # Crear un nuevo proyecto con un ejemplo oficial.
     yarn create astro@latest --template <example-name>
     ```
     </Fragment>
   </PackageManagerTabs>
 
-Then, copy your existing Next project files over to your new Astro project in a separate folder outside of `src`.
+Luego, copia los archivos de tu proyecto Next existente a tu nuevo proyecto Astro en una carpeta separada fuera de `src`.
 
 :::tip
-Visit https://astro.new for the full list of official starter templates, and links for opening a new project in StackBlitz, CodeSandbox, or Gitpod.
+Visita https://astro.new para ver la lista completa de plantillas de inicio oficiales, así como los enlaces para abrir un nuevo proyecto en StackBlitz, CodeSandbox o Gitpod.
 :::
 
 ### Instalar integraciones (opcional)
 
-You may find it useful to install some of [Astro's optional integrations](/en/guides/integrations-guide/) to use while converting your Next project to Astro:
+Puede resultarte útil instalar algunas de las [integraciones opcionales de Astro](/es/guides/integrations-guide/) para usar mientras migras tu proyecto de Next a Astro:
 
-- **@astrojs/react**: to reuse some existing React UI components in your new Astro site, or keep writing with React components.
+- **@astrojs/react**: Para reutilizar algunos de los componentes UI de React existentes en tu nuevo sitio de Astro, o seguir escribiendo con componentes de React.
 
-- **@astrojs/image**: to replace Next's Image plugin with Astro's own image-optimizing components. (Experimental: works in `.astro` and `.mdx` files only.)
+- **@astrojs/image**: 
+para reemplazar el plugin Image de Next con los propios componentes de optimización de imágenes de Astro. (Experimental: solo funciona en archivos `.astro` y `.mdx`)
 
-- **@astrojs/mdx**: to bring existing MDX files from your Next project, or to use MDX in your new Astro site.
+- **@astrojs/mdx**: Para traer archivos MDX existentes de tu proyecto Next, o para usar MDX en tu nuevo sitio Astro.
 
 ### Coloca tu código fuente en `src`
 
-Following [Astro's project structure](/en/core-concepts/project-structure/):
+Siguiendo la [estructura de proyecto de Astro](/es/core-concepts/project-structure/):
 
-1. **Keep** Next's `public/` folder untouched. 
+1. **Mantén** intacta la carpeta `public/` de Next. 
    
-    Astro uses the `public/` directory for static assets, just like Next. There is no change needed to this folder, nor its contents.
+    Astro utiliza el directorio `public/` para almacenar activos estáticos, de la misma manera que lo hace Next. No es necesario realizar ningún cambio en esta carpeta, ni en su contenido.
 
-2. **Copy or Move** Next's other files and folders (e.g. `pages`, `styles` etc.) into Astro's `src/` folder as you rebuild your site, following [Astro's project structure](/en/core-concepts/project-structure/).
+2. **Copia o mueve** los otros archivos de Next (p. ej. `pages`, `styles` etc.) en la carpeta `src/` de Astro mientras reconstruyes tu sitio, siguiendo la [estructura de proyecto de Astro](/es/core-concepts/project-structure/).
 
-    Like Next, Astro's `src/pages/` folder is a special folder used for file-based routing. All other folders are optional, and you can organize the contents of your `src/` folder any way you like. Other common folders in Astro projects include `src/layouts/`, `src/components`, `src/styles`, `src/scripts`.
+   Al igual que en Next, la carpeta `src/pages/`de Astro es una carpeta especial que se utiliza para el enrutamiento basado en archivos. Todas las demás carpetas son opcionales y puedes organizar el contenido de tu carpeta `src/` de la manera que desees. Otras carpetas comunes en proyectos de Astro incluyen `src/layouts/`, `src/components`, `src/styles` y `src/scripts`.
 
 
 ### El archivo de configuración de Astro
 
-Astro has a configuration file at the root of your project called [`astro.config.mjs`](/en/guides/configuring-astro/). This is used only for configuring your Astro project and any installed integrations, including [SSR adapters](/en/guides/deploy/).
+Astro tiene un archivo de configuración en la raíz de tu proyecto llamado [`astro.config.mjs`](/es/guides/configuring-astro/). Esto se utiliza solo para configurar tu proyecto de Astro y cualquier integración instalada, incluidos los [adaptadores SSR](/es/guides/deploy/).
 
 ### Consejos: Convertir archivos JSX a archivos `.astro`
 
-Here are some tips for converting a Next `.js` component into a `.astro` component:
+Aquí hay algunos consejos para convertir un componente `.js` de Next en un componente `.astro`:
 
-1. Use the returned JSX of the existing Next.js component function as the basis for your HTML template.
+1. Usa el JSX devuelto por la función del componente existente de Next.js como base para tu plantilla HTML.
 
-2. Change any [Next or JSX syntax to Astro](#reference-convert-nextjs-syntax-to-astro) or to HTML web standards. This includes `<Link>`, `<Script>`, `{children}`, and `className`, for example.
+2. Cambia cualquier [sintaxis de Next o JSX a Astro](#referencia-cómo-convertir-la-sintaxis-de-nextjs-a-astro) o a los estándares web HTML. Esto incluye `<Link>`, `<Script>`, `{children}`, y `className`, por ejemplo.
 
-1. Move any necessary JavaScript, including import statements, into a ["code fence" (`---`)](/en/core-concepts/astro-components/#the-component-script). Note: JavaScript to [conditionally render content](/en/core-concepts/astro-syntax/#dynamic-html) is often written inside the HTML template directly in Astro.
+3. Mueve cualquier JavaScript necesario, incluyendo las declaraciones de importación, a un ["bloque de código" (`---`)](/es/core-concepts/astro-components/#script-de-un-componente). Nota: JavaScript para [renderizar contenido de forma condicional](/es/core-concepts/astro-syntax/#dynamic-html) se escribe a menudo directamente dentro de la plantilla HTML en Astro.
 
-4. Use [`Astro.props`](/en/reference/api-reference/#astroprops) to access any additional props that were previously passed to your Next function.
+4. Usa [`Astro.props`](/es/reference/api-reference/#astroprops) para acceder a cualquier prop adicional que se haya pasado previamente a tu función de Next.
 
-4. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing React components in your Astro file](/en/core-concepts/framework-components/). But, you may want to convert them to `.astro` components, especially if they do not need to be interactive!
+5. Decide si también es necesario convertir a Astro cualquier componente importado. Con la integración oficial instalada, puedes [usar componentes de React existentes en tu archivo Astro](/es/core-concepts/framework-components/). Pero es posible que desees convertirlos a componentes  `.astro`,  ¡especialmente si no necesitan ser interactivos!
 
-4. Replace `getStaticProps()` with import statements or [`Astro.glob()`](/en/reference/api-reference/#astroglob) to query your local files. Use `fetch()` to fetch external data.
+6. Reemplaza `getStaticProps()` con declaraciones de importación o [`Astro.glob()`](/es/reference/api-reference/#astroglob) para consultar tus archivos locales. Usa `fetch()` para obtener datos externos.
 
-See [an example of a Next `.js` file converted step-by-step](#guided-example-next-data-fetching-to-astro).
+Mira [un ejemplo de un archivo Next `.js` convertido paso a paso](#ejemplo-guiado-cómo-migrar-la-obtención-de-datos-en-next-a-astro).
 
 #### Comparación: JSX vs Astro
 
-Compare the following Next component and a corresponding Astro component:
+Compara el siguiente componente de Next y su equivalente en Astro:
 
 <AstroJSXTabs>
   <Fragment slot="jsx">
@@ -190,15 +191,15 @@ Compare the following Next component and a corresponding Astro component:
 
 ### Migrando archivos de diseño
 
-You may find it helpful to start by converting your Next.js layouts and templates into [Astro layout components](/en/core-concepts/layouts/).
+Puede resultarte útil comenzar convirtiendo tus diseños y plantillas de Next.js en [componentes de diseño de Astro](/es/core-concepts/layouts/).
 
-Next has two different methods for creating layout files, each of which handles layouts differently than Astro:
+Next tiene dos métodos diferentes para crear archivos de diseño, cada uno de los cuales maneja los diseños de manera diferente a Astro:
 
-- The `pages` directory
+- El directorio `pages`
 
-- [The `/app` directory (in beta)](https://beta.nextjs.org/docs/routing/pages-and-layouts#layouts)
+- [El directorio `/app` (en beta)](https://beta.nextjs.org/docs/routing/pages-and-layouts#layouts)
 
-Each Astro page explicitly requires `<html>`, `<head>`, and `<body>` tags to be present, so it is common to reuse a layout file across pages. Astro uses a [`<slot />`](/en/core-concepts/astro-components/#slots) for page content, with no import statement required. Note the standard HTML templating, and direct access to `<head>`:  
+Cada página de Astro requiere explícitamente que se incluyan las etiquetas `<html>`, `<head>`, y `<body>`, por lo que es comñun reutilizar un archivo de diseño en varias páginas. Astro utiliza [`<slot />`](/es/core-concepts/astro-components/#slots) para el contenido de la página, sin necesidad de importar ninguna declaración. Observa la estructura estándar de templating de HTML y el acceso directo al elemento `<head>`:  
 
 ```astro title="src/layouts/Layout.astro"
 ---
@@ -220,7 +221,7 @@ Each Astro page explicitly requires `<html>`, `<head>`, and `<body>` tags to be 
 
 #### Migrando desde el directorio `pages` de Next.js
 
-Your Next project may have a `pages/_document.jsx` file that imports React components to customize your app's `<head>`:
+Tu proyecto de Next puede tener un archivo `pages/_document.jsx` que importa componentes de React, para personalizar el elemento `<head>` de tu aplicacion:
 
 ```jsx title="pages/_document.jsx"
 import Document, { Html, Head, Main, NextScript } from "next/document";
@@ -242,9 +243,9 @@ export default class MyDocument extends Document {
 }
 ```
 
-1. Make a new Astro layout file using only the returned JSX.
+1. Crea un nuevo archivo de diseño de Astro usando únicamente el JSX retornado.
 
-2. Replace any React components with `<html>`, `<head>`, `<slot>`, and other HTML standard tags.
+2. Reemplaza cualquier componente de React con las etiquetas estándar de HTML como  `<html>`, `<head>`, `<slot>`, y otras etiquetas HTML estándar
 
 
 ```astro title="src/layouts/Document.astro"
@@ -260,7 +261,7 @@ export default class MyDocument extends Document {
 
 #### Migrando desde el directorio `/app` de Next.js
 
-Next.js' `app/` directory layout files are created with two files: a `layout.jsx` file to customize the `<html>` and `<body>` contents, and a `head.jsx` file to customize the `<head>` element contents.
+Los archivos de diseño del directorio `app/` de Next.js se crean con dos archivos: un archivo `layout.jsx` para personalizar el contenido de los elementos `<html>` y `<body>`, y un archivo `head.jsx` para personalizar el contenido del elemento`<head>`.
 
 ```jsx title="app/layout.jsx"
 export default function Layout({ children }) {
@@ -282,9 +283,9 @@ export default function Head() {
 }
 ```
 
-1. Make a new Astro layout file using only the returned JSX.
+1. Crea un nuevo archivo de diseño de Astro usando únicamente el JSX retornado.
 
-2. Replace both these files with a single Astro layout file that contains a page shell (`<html>`, `<head>`, and `<body>` tags) and a `<slot/>` instead of React's `{children}` prop:
+2. Reemplaza ambos archivos por un solo archivo de diseño de Astro que contenga una estructura básica de la página (`<html>`, `<head>`, y `<body>`) y un elemento `<slot/>`  en lugar de la propiedad `{children}` de React:
 
 ```astro title="src/layouts/Layout.astro"
 <html lang="en">
@@ -299,21 +300,21 @@ export default function Head() {
 
 ### Migrando páginas y publicaciones
 
-In Next.js, your posts either live in `/pages` or `/app/routeName/page.jsx`.
+En Next.js, tus publicaciones pueden encontrarse en `/pages` o en `/app/routeName/page.jsx`.
 
-In Astro, **all your page content must live within `src/`**, in either `src/pages` or `src/content`.
+En Astro, **todo el contenido de tus páginas debe encontrarse dentro de `src/`**, ya sea en `src/pages` o en `src/content`.
 
 #### Páginas de React
 
-Your existing Next JSX (`.js`) pages will need to be [converted from JSX files to `.astro` pages](#tips-convert-jsx-files-to-astro-files). You cannot use an existing JSX page file in Astro.
+Tus páginas JSX existentes (`.js`) de Next deberán [convertirse de archivos JSX a páginas `.astro`](#consejos-convertir-archivos-jsx-a-archivos-astro). No puedes usar un archivo de página JSX existente en Astro
 
-These [`.astro` pages](/en/core-concepts/astro-pages/) must be located within `src/pages/` and will have page routes generated automatically based on their file path.
+Estas [páginas `.astro`](/es/core-concepts/astro-pages/) deben estar ubicadas dentro de `src/pages/`  sus rutas de página se generarán automáticamente en función de su ruta de archivo.
 
 #### Páginas de Markdown y MDX
 
-Astro has built-in support for Markdown and an optional integration for MDX files. You can reuse any existing [Markdown and MDX files](/en/guides/markdown-content/), but they may require some adjustments to their frontmatter, such as adding [Astro's special `layout` frontmatter property](/es/core-concepts/layouts/#plantillas-de-markdownmdx). You will no longer need to manually create pages for each Markdown-generated route. These files can be placed within `src/pages/` to take advantage of automatic file-based routing.
+Astro tiene soporte incorporado para Markdown y una integración opcional para archivos MDX. Puedes reutilizar cualquier archivo [Markdown y MDX](/es/guides/markdown-content/) existente, pero pueden requerir algunos ajustes en su frontmatter, como agregar [la propiedad especial de frontmatter `layout`de Astro](/es/core-concepts/layouts/#plantillas-de-markdownmdx). Ya no necesitarás crear manualmente páginas para cada ruta generada por Markdown. Estos archivos se pueden colocar dentro de`src/pages/` para aprovechar el enrutamiento automático basado en archivos.
 
-Alternatively, you can use [content collections](/en/guides/content-collections/) in Astro to store and manage your content. When part of a collection, Markdown and MDX files will live in folders within `src/content/`. You will retrieve the content yourself and [generate those pages dynamically](/en/guides/content-collections/#generating-routes-from-content).
+Alternativamente, puedes usar [colecciones de contenido](/es/guides/content-collections/) en Astro para almacenar y administrar tu contenido. Cuando forman parte de una colección, los archivos Markdown y MDX vivirán en carpetas dentro de `src/content/`.  Deberás recuperar el contenido tú mismo y [generar esas páginas dinámicamente](/es/guides/content-collections/#generating-routes-from-content).
 
 ### Migrando Tests
 
