fix broken links

--- a/src/content/docs/es/guides/integrations-guide/mdx.mdx
+++ b/src/content/docs/es/guides/integrations-guide/mdx.mdx
@@ -10,11 +10,11 @@ i18nReady: true
 
 import Video from '~/components/Video.astro';
 
-Esta **[integración de Astro][astro-integration]** permite el uso de componentes [MDX](https://mdxjs.com/) y te permite crear páginas como archivos`.mdx`.
+Esta **[integración de Astro][astro-integration]** permite el uso de componentes [MDX](https://mdxjs.com/) y te permite crear páginas como archivos `.mdx`.
 
 ## ¿Por qué MDX?
 
-MDX te permite [usar variables, expresiones JSX y componentes dentro del contenido Markdown](/en/guides/markdown-content/#mdx-only-features) en Astro. Si tienes contenido existente escrito en MDX, esta integración te permite traer esos archivos a tu proyecto de Astro.
+MDX te permite [usar variables, expresiones JSX y componentes dentro del contenido Markdown](/es/guides/markdown-content/#características-de-mdx-únicamente) en Astro. Si tienes contenido existente escrito en MDX, esta integración te permite traer esos archivos a tu proyecto de Astro.
 
 ## Instalación
 
@@ -67,11 +67,11 @@ export default defineConfig({
 
 ## Uso
 
-Con la integración MDX de Astro, puedes [añadir páginas MDX a tu proyecto](/en/guides/markdown-content/#markdown-and-mdx-pages) añadiendo archivos `.mdx` dentro de tu directorio `src/pages/` directory. También puedes[importar archivos `.mdx`](/en/guides/markdown-content/#importing-markdown) en archivos `.astro`.
+Con la integración MDX de Astro, puedes [añadir páginas MDX a tu proyecto](/es/guides/markdown-content/#páginas-de-markdown-y-mdx) añadiendo archivos `.mdx` dentro de tu directorio `src/pages/`. También puedes [importar archivos `.mdx`](/es/guides/markdown-content/#importando-markdown) en archivos `.astro`.
 
-La integración MDX de Astro agrega características adicionales a MDX estándar, incluyendo el frontmatter estilo Markdown. Esto te permite utilizar la mayoría de las características de Markdown incorporadas en Astro, como una [propiedad especial de frontmatter `layout`](/en/guides/markdown-content/#frontmatter-layout) y una [propiedad para marcar una página como borrador](/en/guides/markdown-content/#draft-pages).
+La integración MDX de Astro agrega características adicionales a MDX estándar, incluyendo el frontmatter estilo Markdown. Esto te permite utilizar la mayoría de las características de Markdown incorporadas en Astro, como una [propiedad especial de frontmatter `layout`](/es/guides/markdown-content/#layout-en-el-frontmatter) y una [propiedad para marcar una página como borrador](/es/guides/markdown-content/#páginas-de-borrador).
 
-Consulta cómo funciona MDX en Astro con ejemplos en nuestra [guía de Markdown y MDX](/en/guides/markdown-content/).
+Consulta cómo funciona MDX en Astro con ejemplos en nuestra [guía de Markdown y MDX](/es/guides/markdown-content/).
 
 Visita la [documentación de MDX](https://mdxjs.com/docs/what-is-mdx/) para aprender sobre el uso de las características estándar de MDX.
 
@@ -87,10 +87,10 @@ Puedes configurar cómo se renderiza tu MDX con las siguientes opciones:
 
 ### Opciones heredadas de la configuración de Markdown
 
-Todas las [opciones de configuración de `markdown`](/en/reference/configuration-reference/#markdown-options) excepto `drafts`  pueden ser configuradas por separado en la integración MDX. Esto incluye plugins de remark y rehype, resaltado de sintaxis y más. Las opciones se establecerán por defecto con las de tu configuración de Markdown ([consulta la opción `extendMarkdownConfig`](#extendmarkdownconfig) para modificar esto).
+Todas las [opciones de configuración de `markdown`](/es/reference/configuration-reference/#opciones-de-markdow) excepto `drafts`  pueden ser configuradas por separado en la integración MDX. Esto incluye plugins de remark y rehype, resaltado de sintaxis y más. Las opciones se establecerán por defecto con las de tu configuración de Markdown ([consulta la opción `extendMarkdownConfig`](#extendmarkdownconfig) para modificar esto).
 
 :::note
-No hay una configuración de MDX separada para [incluir páginas marcadas como borrador en la compilación](/en/reference/configuration-reference/#markdowndrafts). Esta configuración de Markdown será respetada tanto por archivos de Markdown como de MDX y no se puede anular específicamente para archivos de MDX.
+No hay una configuración de MDX separada para [incluir páginas marcadas como borrador en la compilación](/es/reference/configuration-reference/#markdowndrafts). Esta configuración de Markdown será respetada tanto por archivos de Markdown como de MDX y no se puede anular específicamente para archivos de MDX.
 :::
 
 **`astro.config.mjs`**
@@ -116,17 +116,17 @@ export default defineConfig({
 ```
 
 :::caution
-MDX no admite pasar plugins de remark y rehype como una cadena. En su lugar, debes instalar, importar y aplicar la función del complemento.
+MDX no admite pasar plugins de remark y rehype como una cadena. En su lugar, debes instalar, importar y aplicar la función del plugin.
 :::
 
-📚 Consulta la [referencia de opciones de Markdown](/en/reference/configuration-reference/#markdown-options) para ver una lista completa de opciones.
+📚 Consulta la [referencia de opciones de Markdown](/es/reference/configuration-reference/#opciones-de-markdown) para ver una lista completa de opciones.
 
 ### `extendMarkdownConfig`
 
 *   **Tipo:** `boolean`
 *   **Por defecto:** `true`
 
-Por defecto, MDX extenderá [la configuración de Markdown existente en tu proyecto](/en/reference/configuration-reference/#markdown-options). Para anular opciones individuales, puedes especificar su equivalente en la configuración de MDX.
+Por defecto, MDX extenderá [la configuración de Markdown existente en tu proyecto](/es/reference/configuration-reference/#opciones-de-markdown). Para anular opciones individuales, puedes especificar su equivalente en la configuración de MDX.
 
 Por ejemplo, digamos que necesitas desactivar el Markdown con formato de GitHub y aplicar un conjunto diferente de plugins de remark para archivos MDX. Puedes aplicar estas opciones de la siguiente manera, con `extendMarkdownConfig` habilitado de forma predeterminada:
 
@@ -202,6 +202,6 @@ Este paquete es mantenido por el equipo central de Astro. ¡Estás invitado a en
 
 Consulta el [CHANGELOG.md](https://github.com/withastro/astro/tree/main/packages/integrations/mdx/CHANGELOG.md) para un historial de cambios en esta integración.
 
-[astro-integration]: /en/guides/integrations-guide/
+[astro-integration]: /es/guides/integrations-guide/
 
-[astro-ui-frameworks]: /en/core-concepts/framework-components/#using-framework-components
+[astro-ui-frameworks]: /es/core-concepts/framework-components/#usando-componente-de-framework
