--- a/src/content/docs/es/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-nextjs.mdx
@@ -213,7 +213,7 @@ Cada página de Astro requiere explícitamente que se incluyan las etiquetas `<h
 		<title>Astro</title>
 	</head>
 	<body>
-    <!-- Wrap the slot element with your existing layout templating -->
+    <!-- Envuelve el elemento slot con tu plantilla de diseño existente-->
 		<slot />
 	</body>
 </html>
