document Astro.request.method in SSR guide (#3099)
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/content/docs/en/guides/server-side-rendering.mdx
+++ b/src/content/docs/en/guides/server-side-rendering.mdx
@@ -140,7 +140,7 @@ export async function get() {
 
 ### `Astro.request.headers`
 
-The headers for the request are available on `Astro.request.headers`. It is a [Headers](https://developer.mozilla.org/en-US/docs/Web/API/Headers) object, a Map-like object where you can retrieve headers such as the cookie.
+The headers for the request are available on `Astro.request.headers`. This works like the browser's [`Request.headers`](https://developer.mozilla.org/en-US/docs/Web/API/Request/headers). It is a [Headers](https://developer.mozilla.org/en-US/docs/Web/API/Headers) object, a Map-like object where you can retrieve headers such as the cookie.
 
 ```astro title="src/pages/index.astro" {2}
 ---
@@ -150,6 +150,16 @@ const cookie = Astro.request.headers.get('cookie');
 <html>
   <!-- Page here... -->
 </html>
+```
+
+### `Astro.request.method`
+
+The HTTP method used in the request is available as `Astro.request.method`. This works like the browser's [`Request.method`](https://developer.mozilla.org/en-US/docs/Web/API/Request/method). It returns the string representation of the HTTP method used in the request.
+
+```astro title="src/pages/index.astro"
+---
+console.log(Astro.request.method) // GET (when navigated to in the browser)
+---
 ```
 
 :::caution
