Fix typo in Markdown plugins sample code
This fixes issue #3128.

--- a/src/content/docs/en/guides/markdown-content.mdx
+++ b/src/content/docs/en/guides/markdown-content.mdx
@@ -464,7 +464,8 @@ import { rehypeAccessibleEmojis } from 'rehype-accessible-emojis';
 export default defineConfig({
   markdown: {
     // Applied to .md and .mdx files
-    remarkPlugins: [remarkToc, rehypeAccessibleEmojis],
+    remarkPlugins: [remarkToc],
+    rehypePlugins: [rehypeAccessibleEmojis],
   },
 });
 ```
